--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <div style="font-size: 130%; padding-top: 30px; text-align: center;">Please Select your issue(s):</div>
 
-  <form>
+  <form action="Thanks.html">
     <label>
       <input type="checkbox" name="issue" id="issue1" value="Water leakage">
       Water Leakage
