--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </script>
 <script type="text/javascript">
    (function(){
-      emailjs.init("U-ovmTMkrkNQTYlF4");
+      emailjs.init("zaeHUQVJH18bWwUNQ");
    })();
 </script>
 
@@ -90,8 +90,8 @@
       date: currentDate.toLocaleDateString(),
       time: currentDate.toLocaleTimeString(),
     }
-    const service_ID = "service_kgf87ys";
-  const template_ID = "template_3si5t2t";
+    const service_ID = "service_terv6fd";
+  const template_ID = "template_c3cjjrx";
 
   emailjs.send(service_ID,template_ID,params)
     .then(
